# property-ci-scraper

./: Cargo.toml  README.md  property24_page.html  property24_selectors.json
migrations/: 20250805202244_properties.sql
src/: lib.rs  main.rs
src/controller/: controller.rs  mod.rs  scraping_controller.rs
src/models/: property.rs
src/repository/: mod.rs  property_repo.rs
src/service/: export.rs  mod.rs  scheduler.rs  scraper.rs
