[package]
name = "property-ci-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["macros"] }
tokio = "1.26.0"
chrono = "0.4.41"
