[package]
name = "property-ci-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
serde = { version = "1.0.148", features = ["derive"] }
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["macros", "chrono", "uuid"] }
tokio = { version = "1.26.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
log = "0.4.27"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
select = "0.6"
tokio-cron-scheduler = "0.9"
csv = "1.2"
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
